Switch to hpack.
I also moved the hspec test files into a new module hierarchy due to a
misunderstanding of how hpack worked with hspec. This wasn't strictly
necessary in the end, but it's probably a nicer organization anyway,
so I'll keep it.

--- a/hpio.cabal
+++ b/hpio.cabal
@@ -1,260 +1,259 @@
-Name:                   hpio
-Version:                0.8.0.10
-Cabal-Version:          >= 1.10
-Build-Type:             Simple
-Author:                 Drew Hess <dhess-src@quixoftic.com>
-Maintainer:             Drew Hess <dhess-src@quixoftic.com>
-Homepage:               https://github.com/quixoftic/hpio
-Bug-Reports:            https://github.com/quixoftic/hpio/issues/
-Stability:              experimental
-License:                BSD3
-License-File:           LICENSE
-Copyright:              Copyright (c) 2017, Quixoftic, LLC
-Tested-With:            GHC == 7.8.4, GHC == 7.10.2, GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2
-Category:               System
-Synopsis:               Monads for GPIO in Haskell
-Description:
-  This package provides an embedded DSL for writing cross-platform
-  GPIO programs in Haskell. Currently only Linux is supported (via the
-  @sysfs@ filesystem), but other Unix GPIO platforms will be supported
-  in the future.
-  .
-  Monads and low-level actions are also provided for each supported
-  platform's native GPIO API, if you want to program directly to
-  the platform API.
-  .
-  Example programs are provided in the 'examples' directory of the
-  source code distribution. There is also a "System.GPIO.Tutorial"
-  module, which explains how to use the cross-platform DSL.
-Extra-Doc-Files:        README.md
-Extra-Source-Files:     .travis.yml
-                      , Hlint.hs
-                      , changelog.md
-                      , default.nix
-                      , shell.nix
-                      , stack.yaml
-                      , stack-lts-2.yaml
-
--- Enable Linux BeagleBone-specific tests. See
--- test/System/GPIO/Linux/Sysfs/BeagleBoneSpec.hs for requirements.
+-- This file has been generated from package.yaml by hpack version 0.18.1.
 --
--- > cabal test -flinux-bbone-tests
-Flag linux-bbone-tests
-  Default: False
-  Manual: True
+-- see: https://github.com/sol/hpack
 
--- Build doctests
-Flag test-doctests
-  Default: True
-  Manual: True
+name:                   hpio
+version:                0.8.0.10
+synopsis:               Monads for GPIO in Haskell
+description:            This package provides an embedded DSL for writing cross-platform
+                        GPIO programs in Haskell. Currently only Linux is supported (via the
+                        @sysfs@ filesystem), but other Unix GPIO platforms will be supported
+                        in the future.
+                        .
+                        Monads and low-level actions are also provided for each supported
+                        platform's native GPIO API, if you want to program directly to
+                        the platform API.
+                        .
+                        Example programs are provided in the 'examples' directory of the
+                        source code distribution. There is also a "System.GPIO.Tutorial"
+                        module, which explains how to use the cross-platform DSL.
+category:               System
+stability:              experimental
+homepage:               https://github.com/quixoftic/hpio#readme
+bug-reports:            https://github.com/quixoftic/hpio/issues
+author:                 Drew Hess <dhess-src@quixoftic.com>
+maintainer:             Drew Hess <dhess-src@quixoftic.com>
+copyright:              Copyright (c) 2017, Quixoftic, LLC
+license:                BSD3
+license-file:           LICENSE
+tested-with:            GHC==7.8.4 GHC==7.10.2 GHC==7.10.3 GHC==8.0.1 GHC==8.0.2 GHC==8.2.1
+build-type:             Simple
+cabal-version:          >= 1.10
 
--- Build hlint test
-Flag test-hlint
-  Default: True
-  Manual: True
+extra-source-files:
+    .travis.yml
+    changelog.md
+    default.nix
+    Hlint.hs
+    README.md
+    shell.nix
+    stack-lts-2.yaml
+    stack.yaml
 
--- Build the example programs
-Flag examples
-  Default: True
-  Manual: True
+source-repository head
+  type: git
+  location: https://github.com/quixoftic/hpio
 
-Library
-  Default-Language:     Haskell2010
-  HS-Source-Dirs:       src
-  GHC-Options:          -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
-  If impl(ghc > 8)
-    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
-  Exposed-Modules:      System.GPIO
-                      , System.GPIO.Linux
-                      , System.GPIO.Linux.Sysfs
-                      , System.GPIO.Linux.Sysfs.IO
-                      , System.GPIO.Linux.Sysfs.Monad
-                      , System.GPIO.Linux.Sysfs.Mock
-                      , System.GPIO.Linux.Sysfs.Types
-                      , System.GPIO.Linux.Sysfs.Util
-                      , System.GPIO.Monad
-                      , System.GPIO.Tutorial
-                      , System.GPIO.Types
-  Other-Modules:        System.GPIO.Linux.Sysfs.Mock.Internal
-  Other-Extensions:     CPP
-                      , DeriveDataTypeable
-                      , DeriveGeneric
-                      , ExistentialQuantification
-                      , FlexibleContexts
-                      , FlexibleInstances
-                      , FunctionalDependencies
-                      , GADTs
-                      , GeneralizedNewtypeDeriving
-                      , InterruptibleFFI
-                      , KindSignatures
-                      , LambdaCase
-                      , MultiParamTypeClasses
-                      , OverloadedStrings
-                      , PackageImports
-                      , QuasiQuotes
-                      , Safe
-                      , TemplateHaskell
-                      , Trustworthy
-                      , TypeSynonymInstances
-                      , UndecidableInstances
-  Build-Depends:        QuickCheck          >= 2.7.6  && < 2.11
-                      , base                >= 4.7.0  && < 5
-                      , base-compat         >= 0.6.0  && < 1
-                      , bytestring          >= 0.10.4 && < 0.11
-                      , containers          >= 0.5.5  && < 0.6
-                      , directory           >= 1.2.1  && < 1.4
-                      , exceptions          >= 0.8.0  && < 1
-                      , filepath            >= 1.3.0  && < 1.5
-                      , mtl                 >= 2.1.3  && < 2.3
-                      , mtl-compat          >= 0.2.1  && < 0.3
-                      , text                >= 1.2.0  && < 1.3
-                      , transformers        >= 0.3.0  && < 0.6
-                      , transformers-compat >= 0.4.0  && < 1
-                      , unix                >= 2.7.0  && < 2.8
-                      , unix-bytestring     >= 0.3.7  && < 0.4
-  C-Sources:            src/System/GPIO/Linux/Sysfs/pollSysfs.c
-  CC-Options:           -Wall
+flag examples
+  description: Build the example programs
+  manual: True
+  default: True
 
-Executable hpio-sysfs-example
-  Main-Is:              Sysfs.hs
-  HS-Source-Dirs:       examples
-  If !flag(examples)
-    Buildable: False
-  Else
-    Build-Depends:      base
-                      , async                >= 2.0.2  && < 2.2
-                      , base-compat
-                      , hpio
-                      , mtl
-                      , mtl-compat
-                      , optparse-applicative >= 0.11.0 && < 0.15
-                      , transformers
-                      , transformers-compat
-  Default-Language:     Haskell2010
-  Ghc-Options:          -Wall -threaded
+flag linux-bbone-tests
+  description: Enable Linux BeagleBone-specific tests. Disabled by default. See test/System/GPIO/Linux/Sysfs/BeagleBoneSpec.hs for requirements. Run with "cabal test -flinux-bbone-tests".
 
-Executable hpio-example
-  Main-Is:              Gpio.hs
-  HS-Source-Dirs:       examples
-  If !flag(examples)
-    Buildable: False
-  Else
-    Build-Depends:      base
-                      , async
-                      , base-compat
-                      , exceptions
-                      , hpio
-                      , mtl
-                      , mtl-compat
-                      , optparse-applicative
-                      , transformers
-                      , transformers-compat
-  Default-Language:     Haskell2010
-  Ghc-Options:          -Wall -threaded
-  If impl(ghc > 8)
-    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
+  manual: True
+  default: False
 
-Executable hpio-reader-example
-  Main-Is:              GpioReader.hs
-  HS-Source-Dirs:       examples
-  If !flag(examples)
-    Buildable: False
-  Else
-    Build-Depends:      base
-                      , async
-                      , base-compat
-                      , exceptions
-                      , hpio
-                      , mtl
-                      , mtl-compat
-                      , optparse-applicative
-                      , transformers
-                      , transformers-compat
+flag test-doctests
+  description: Build doctests
+  manual: True
+  default: True
 
-  Default-Language:     Haskell2010
-  Ghc-Options:          -Wall -threaded
-  If impl(ghc > 8)
-    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
+flag test-hlint
+  description: Build hlint test
+  manual: True
+  default: True
 
-Test-Suite hlint
-  Type:                 exitcode-stdio-1.0
-  Default-Language:     Haskell2010
-  Hs-Source-Dirs:       test
-  Ghc-Options:          -w -threaded
-  Main-Is:              hlint.hs
-  If !flag(test-hlint)
-    Buildable: False
-  Else
-    Build-Depends:      base
-                      , hlint
+library
+  hs-source-dirs:
+      src
+  other-extensions: CPP DeriveDataTypeable DeriveGeneric ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InterruptibleFFI KindSignatures LambdaCase MultiParamTypeClasses OverloadedStrings PackageImports QuasiQuotes Safe TemplateHaskell Trustworthy TypeSynonymInstances UndecidableInstances
+  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
+  cc-options: -Wall
+  c-sources:
+      src/System/GPIO/Linux/Sysfs/pollSysfs.c
+  build-depends:
+      QuickCheck          >=2.7.6  && <2.11
+    , base                >=4.7.0  && <5
+    , base-compat         >=0.6.0  && <1
+    , bytestring          >=0.10.4 && <0.11
+    , containers          >=0.5.5  && <0.6
+    , directory           >=1.2.1  && <1.4
+    , exceptions          >=0.8.0  && <1
+    , filepath            >=1.3.0  && <1.5
+    , mtl                 >=2.1.3  && <2.3
+    , mtl-compat          >=0.2.1  && <0.3
+    , text                >=1.2.0  && <1.3
+    , transformers        >=0.3.0  && <0.6
+    , transformers-compat >=0.4.0  && <1
+    , unix                >=2.7.0  && <2.8
+    , unix-bytestring     >=0.3.7  && <0.4
+  if impl(ghc >= 8.0)
+    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
+  else
+    build-depends:
+        fail       == 4.9.*
+      , semigroups == 0.18.*
+  exposed-modules:
+      System.GPIO
+      System.GPIO.Linux
+      System.GPIO.Linux.Sysfs
+      System.GPIO.Linux.Sysfs.IO
+      System.GPIO.Linux.Sysfs.Mock
+      System.GPIO.Linux.Sysfs.Monad
+      System.GPIO.Linux.Sysfs.Types
+      System.GPIO.Linux.Sysfs.Util
+      System.GPIO.Monad
+      System.GPIO.Tutorial
+      System.GPIO.Types
+  other-modules:
+      System.GPIO.Linux.Sysfs.Mock.Internal
+  default-language: Haskell2010
 
-Test-Suite doctest
-  Type:                 exitcode-stdio-1.0
-  Default-Language:     Haskell2010
-  Hs-Source-Dirs:       test
-  Ghc-Options:          -Wall -threaded
-  Main-Is:              doctest.hs
-  -- Disabled on GHC 7.8.x and earlier due to missing Data.Bits bits.
-  If !flag(test-doctests) || impl(ghc < 7.10)
-    Buildable: False
-  Else
-    Build-Depends:      base
-                      , doctest
-                      , filepath
+executable hpio-example
+  main-is: Gpio.hs
+  hs-source-dirs:
+      examples
+  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
+  if !(flag(examples))
+    buildable: False
+  else
+    build-depends:
+        base
+      , async >=2.0.2 && <2.2
+      , base-compat
+      , exceptions
+      , hpio
+      , mtl
+      , mtl-compat
+      , optparse-applicative >=0.11.0 && <0.15
+      , transformers
+      , transformers-compat
+  if impl(ghc >= 8.0)
+    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
+  default-language: Haskell2010
 
-Test-Suite spec
-  Type:                 exitcode-stdio-1.0
-  Default-Language:     Haskell2010
-  Hs-Source-Dirs:       src
-                      , test
-  Ghc-Options:          -Wall -threaded
-  If impl(ghc > 8)
-    GHC-Options:        -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
-  Main-Is:              Main.hs
-  Build-Depends:        QuickCheck
-                      , base
-                      , async
-                      , base-compat
-                      , bytestring
-                      , containers
-                      , directory
-                      , exceptions
-                      , filepath
-                      , hspec               >= 2.1.7
-                      , mtl
-                      , mtl-compat
-                      , text
-                      , transformers
-                      , transformers-compat
-                      , unix
-                      , unix-bytestring
-  Other-modules:        System.GPIO
-                      , System.GPIO.Linux
-                      , System.GPIO.Linux.Sysfs
-                      , System.GPIO.Linux.Sysfs.IO
-                      , System.GPIO.Linux.Sysfs.Monad
-                      , System.GPIO.Linux.Sysfs.Mock
-                      , System.GPIO.Linux.Sysfs.Mock.Internal
-                      , System.GPIO.Linux.Sysfs.Types
-                      , System.GPIO.Linux.Sysfs.Util
-                      , System.GPIO.Monad
-                      , System.GPIO.Tutorial
-                      , System.GPIO.Types
-                      , Spec
-                      , System.GPIO.TypesSpec
-                      , System.GPIO.Linux.Sysfs.LinuxBboneSpec
-                      , System.GPIO.Linux.Sysfs.MockInternalSpec
-                      , System.GPIO.Linux.Sysfs.MockSpec
-                      , System.GPIO.Linux.Sysfs.SysfsGpioMockSpec
-  C-Sources:            src/System/GPIO/Linux/Sysfs/pollSysfs.c
-  If flag(linux-bbone-tests)
+executable hpio-reader-example
+  main-is: GpioReader.hs
+  hs-source-dirs:
+      examples
+  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
+  if !(flag(examples))
+    buildable: False
+  else
+    build-depends:
+        base
+      , async >=2.0.2 && <2.2
+      , base-compat
+      , exceptions
+      , hpio
+      , mtl
+      , mtl-compat
+      , optparse-applicative >=0.11.0 && <0.15
+      , transformers
+      , transformers-compat
+  if impl(ghc >= 8.0)
+    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
+  default-language: Haskell2010
+
+executable hpio-sysfs-example
+  main-is: Sysfs.hs
+  hs-source-dirs:
+      examples
+  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
+  if !(flag(examples))
+    buildable: False
+  else
+    build-depends:
+        base
+      , async >=2.0.2 && <2.2
+      , base-compat
+      , exceptions
+      , hpio
+      , mtl
+      , mtl-compat
+      , optparse-applicative >=0.11.0 && <0.15
+      , transformers
+      , transformers-compat
+  if impl(ghc >= 8.0)
+    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
+  default-language: Haskell2010
+
+test-suite doctest
+  type: exitcode-stdio-1.0
+  main-is: doctest.hs
+  hs-source-dirs:
+      test
+  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
+  if (!(flag(test-doctests))) || (impl(ghc <7.10))
+    buildable: False
+  else
+    build-depends:
+        base
+      , doctest
+      , filepath
+  default-language: Haskell2010
+
+test-suite hlint
+  type: exitcode-stdio-1.0
+  main-is: hlint.hs
+  hs-source-dirs:
+      test
+  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -w -threaded
+  if !(flag(test-hlint))
+    buildable: False
+  else
+    build-depends:
+        base
+      , hlint
+  default-language: Haskell2010
+
+test-suite spec
+  type: exitcode-stdio-1.0
+  main-is: Spec.hs
+  hs-source-dirs:
+      test
+      src
+  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
+  build-depends:
+      QuickCheck
+    , base
+    , async
+    , base-compat
+    , bytestring
+    , containers
+    , directory
+    , exceptions
+    , filepath
+    , hspec                >=2.1.7
+    , mtl
+    , mtl-compat
+    , text
+    , transformers
+    , transformers-compat
+    , unix
+    , unix-bytestring
+  if impl(ghc >= 8.0)
+    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
+  if flag(linux-bbone-tests)
     cpp-options: -DRUN_LINUX_BBONE_TESTS=1
-
-Source-Repository head
-  Type:                 git
-  Location:             git://github.com/quixoftic/hpio.git
-
-Source-Repository this
-  Type:                 git
-  Location:             git://github.com/quixoftic/hpio.git
-  Tag:                  v0.8.0.10
+  other-modules:
+      Test.System.GPIO.Linux.Sysfs.LinuxBboneSpec
+      Test.System.GPIO.Linux.Sysfs.MockInternalSpec
+      Test.System.GPIO.Linux.Sysfs.MockSpec
+      Test.System.GPIO.Linux.Sysfs.SysfsGpioMockSpec
+      Test.System.GPIO.TypesSpec
+      System.GPIO
+      System.GPIO.Linux
+      System.GPIO.Linux.Sysfs
+      System.GPIO.Linux.Sysfs.IO
+      System.GPIO.Linux.Sysfs.Mock
+      System.GPIO.Linux.Sysfs.Mock.Internal
+      System.GPIO.Linux.Sysfs.Monad
+      System.GPIO.Linux.Sysfs.Types
+      System.GPIO.Linux.Sysfs.Util
+      System.GPIO.Monad
+      System.GPIO.Tutorial
+      System.GPIO.Types
+  default-language: Haskell2010
