Add extensions used by examples to package.yaml.

--- a/hpio.cabal
+++ b/hpio.cabal
@@ -115,6 +115,7 @@ executable hpio-example
   main-is: Gpio.hs
   hs-source-dirs:
       examples
+  other-extensions: LambdaCase OverloadedStrings
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
   if !(flag(examples))
     buildable: False
@@ -138,6 +139,7 @@ executable hpio-reader-example
   main-is: GpioReader.hs
   hs-source-dirs:
       examples
+  other-extensions: FlexibleContexts LambdaCase OverloadedStrings
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
   if !(flag(examples))
     buildable: False
@@ -161,6 +163,7 @@ executable hpio-sysfs-example
   main-is: Sysfs.hs
   hs-source-dirs:
       examples
+  other-extensions: FlexibleContexts LambdaCase OverloadedStrings
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
   if !(flag(examples))
     buildable: False
