Make some signatures more concise via ConstraintKinds.

--- a/package.yaml
+++ b/package.yaml
@@ -78,6 +78,7 @@ library:
   cc-options:
     - -Wall
   other-extensions:
+    - ConstraintKinds
     - CPP
     - DeriveDataTypeable
     - DeriveGeneric
