--- a/package.yaml
+++ b/package.yaml
@@ -110,10 +110,12 @@ library:
     - directory           >=1.2.1  && <1.4
     - exceptions          >=0.8.0  && <1
     - filepath            >=1.3.0  && <1.5
+    - monad-control       == 1.*
     - mtl                 >=2.1.3  && <2.3
     - mtl-compat          >=0.2.1  && <0.3
     - text                >=1.2.0  && <1.3
     - transformers        >=0.3.0  && <0.6
+    - transformers-base   == 0.4.*
     - transformers-compat >=0.4.0  && <1
     - unix                >=2.7.0  && <2.8
     - unix-bytestring     >=0.3.7  && <0.4
