--- a/package.yaml
+++ b/package.yaml
@@ -111,6 +111,7 @@ library:
     - exceptions          >=0.8.0  && <1
     - filepath            >=1.3.0  && <1.5
     - monad-control       == 1.*
+    - monad-logger        == 0.3.*
     - mtl                 >=2.1.3  && <2.3
     - mtl-compat          >=0.2.1  && <0.3
     - text                >=1.2.0  && <1.3
