--- a/hpio.cabal
+++ b/hpio.cabal
@@ -68,6 +68,7 @@ flag test-hlint
 library
   hs-source-dirs:
       src
+  default-extensions: NoImplicitPrelude
   other-extensions: ConstraintKinds CPP DefaultSignatures DeriveDataTypeable DeriveGeneric ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InterruptibleFFI KindSignatures LambdaCase MultiParamTypeClasses OverloadedStrings PackageImports QuasiQuotes Safe TemplateHaskell Trustworthy TypeSynonymInstances UndecidableInstances
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
   cc-options: -Wall
@@ -86,6 +87,7 @@ library
     , monad-logger        == 0.3.*
     , mtl                 >=2.1.3  && <2.3
     , mtl-compat          >=0.2.1  && <0.3
+    , protolude           >= 0.1.0
     , text                >=1.2.0  && <1.3
     , transformers        >=0.3.0  && <0.6
     , transformers-base   == 0.4.*
@@ -119,6 +121,7 @@ executable hpio-example
   main-is: Gpio.hs
   hs-source-dirs:
       examples
+  default-extensions: NoImplicitPrelude
   other-extensions: ConstraintKinds LambdaCase OverloadedStrings
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
   if !(flag(examples))
@@ -133,6 +136,8 @@ executable hpio-example
       , mtl
       , mtl-compat
       , optparse-applicative >=0.11.0 && <0.15
+      , protolude
+      , text
       , transformers
       , transformers-compat
   if impl(ghc >= 8.0)
@@ -143,6 +148,7 @@ executable hpio-reader-example
   main-is: GpioReader.hs
   hs-source-dirs:
       examples
+  default-extensions: NoImplicitPrelude
   other-extensions: ConstraintKinds FlexibleContexts LambdaCase OverloadedStrings
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
   if !(flag(examples))
@@ -157,6 +163,8 @@ executable hpio-reader-example
       , mtl
       , mtl-compat
       , optparse-applicative >=0.11.0 && <0.15
+      , protolude
+      , text
       , transformers
       , transformers-compat
   if impl(ghc >= 8.0)
@@ -167,6 +175,7 @@ executable hpio-sysfs-example
   main-is: Sysfs.hs
   hs-source-dirs:
       examples
+  default-extensions: NoImplicitPrelude
   other-extensions: FlexibleContexts LambdaCase OverloadedStrings
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
   if !(flag(examples))
@@ -181,6 +190,8 @@ executable hpio-sysfs-example
       , mtl
       , mtl-compat
       , optparse-applicative >=0.11.0 && <0.15
+      , protolude
+      , text
       , transformers
       , transformers-compat
   if impl(ghc >= 8.0)
@@ -192,6 +203,7 @@ test-suite doctest
   main-is: doctest.hs
   hs-source-dirs:
       test
+  default-extensions: NoImplicitPrelude
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
   if (!(flag(test-doctests))) || (impl(ghc <7.10))
     buildable: False
@@ -200,6 +212,7 @@ test-suite doctest
         base
       , doctest
       , filepath
+      , protolude
   default-language: Haskell2010
 
 test-suite hlint
@@ -207,6 +220,7 @@ test-suite hlint
   main-is: hlint.hs
   hs-source-dirs:
       test
+  default-extensions: NoImplicitPrelude
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -w -threaded
   if !(flag(test-hlint))
     buildable: False
@@ -214,6 +228,7 @@ test-suite hlint
     build-depends:
         base
       , hlint
+      , protolude
   default-language: Haskell2010
 
 test-suite spec
@@ -221,6 +236,7 @@ test-suite spec
   main-is: Spec.hs
   hs-source-dirs:
       test
+  default-extensions: NoImplicitPrelude
   ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -threaded
   build-depends:
       base
@@ -231,6 +247,7 @@ test-suite spec
     , filepath
     , hpio
     , hspec                >=2.1.7
+    , protolude
     , QuickCheck
   if flag(linux-bbone-tests)
     cpp-options: -DRUN_LINUX_BBONE_TESTS=1
