--- a/package.yaml
+++ b/package.yaml
@@ -59,6 +59,9 @@ ghc-options:
   - -Wincomplete-uni-patterns
   - -Wincomplete-record-updates
 
+default-extensions:
+  - NoImplicitPrelude
+
 library:
   when:
     - condition: impl(ghc >= 8.0)
@@ -114,6 +117,7 @@ library:
     - monad-logger        == 0.3.*
     - mtl                 >=2.1.3  && <2.3
     - mtl-compat          >=0.2.1  && <0.3
+    - protolude           >= 0.1.0
     - text                >=1.2.0  && <1.3
     - transformers        >=0.3.0  && <0.6
     - transformers-base   == 0.4.*
@@ -147,6 +151,8 @@ executables:
           - mtl
           - mtl-compat
           - optparse-applicative >=0.11.0 && <0.15
+          - protolude
+          - text
           - transformers
           - transformers-compat
       - condition: impl(ghc >= 8.0)
@@ -187,6 +193,7 @@ tests:
         dependencies:
           - base
           - hlint
+          - protolude
   doctest:
     main: doctest.hs
     source-dirs: test
@@ -202,6 +209,7 @@ tests:
           - base
           - doctest
           - filepath
+          - protolude
   spec:
     main: Spec.hs
     source-dirs:
@@ -217,6 +225,7 @@ tests:
       - filepath
       - hpio
       - hspec                >=2.1.7
+      - protolude
       - QuickCheck
     ghc-options:
       - -threaded
