--- a/stack-lts-2.yaml
+++ b/stack-lts-2.yaml
@@ -4,6 +4,9 @@ resolver: lts-2.22
 packages:
 - .
 extra-deps:
+- fail-4.9.0.0
+- protolude-0.2
+- semigroups-0.18.3
 - unix-bytestring-0.3.7.3
 flags:
   hpio:
