--- a/hpio.cabal
+++ b/hpio.cabal
@@ -86,7 +86,7 @@ library
     , monad-logger        == 0.3.*
     , mtl                 >=2.1.3  && <2.3
     , mtl-compat          >=0.2.1  && <0.3
-    , protolude           >= 0.1.0
+    , protolude           == 0.2.*
     , text                >=1.2.0  && <1.3
     , transformers        >=0.3.0  && <0.6
     , transformers-base   == 0.4.*
