--- a/stack-lts-2.yaml
+++ b/stack-lts-2.yaml
@@ -6,6 +6,7 @@ extra-deps:
 - fail-4.9.0.0
 - mtl-2.2.1
 - mtl-compat-0.2.1.3
+- monad-logger-0.3.16
 - primitive-0.6.2.0
 - protolude-0.2
 - semigroups-0.18.2
