--- a/.travis.yml
+++ b/.travis.yml
@@ -159,7 +159,7 @@ script:
         cd dist
         tar zxfv "$SRC_TGZ"
         cd "$PKGVER"
-        cabal configure --enable-tests
+        cabal configure --enable-tests $CABALARGS
         cabal build
         cabal test
         cd $ORIGDIR
