--- a/package.yaml
+++ b/package.yaml
@@ -241,7 +241,11 @@ extra-source-files:
   - README.md
   - changelog.md
   - nix/*
+  - package.yaml
   - release.nix
   - shell.nix
   - stack.yaml
   - stack-lts-2.yaml
+  - stack-lts-3.yaml
+  - stack-lts-6.yaml
+  - stack-lts-7.yaml
